--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>C# cайт</title>
-    <base href="/CSharp-Website/" />
+    <base href="/" />
     <link rel="icon" href="Icon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
@@ -35,7 +35,7 @@
             }
         }
     </style>
-    <script src="_framework/blazor.webassembly.js"></script>
     <script src="scroll.js" type="module"></script>
+    <script src="_framework/blazor.webassembly.js"></script>
 </body>
 </html>
