--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         }
     </style>
     <script src="scroll.js" type="module"></script>
+    <script src="snakeIntertop.js" type="module"></script>
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
 </html>
